# hbuild

./: .gitignore  Dockerfile  TODO.md  clean.sh  config.toml  docker-compose.yml  hbuild.code-workspace  packages.yml  pyproject.toml  run.sh  schema.sql  sources.yml  tmp.yaml  tools.yml
build_files/: cross_file.txt
docker/: Dockerfile
hbuild/: __init__.py  __main__.py  config.py  dispatch.py  legacy.py  models.py  package.py  registry.py  server.py  source.py  sql.py  stage.py  step.py  tool.py  worker.py
hbuild/runner/: __main__.py  runner.py
patches/automake/: 0001-hades-edits.patch
patches/bash/: 0001-hades-edits.patch
patches/binutils/: 0001-hades-edits.patch
patches/coreutils/: 0001-hades-edits.patch
patches/dpkg/: 0001-hades-edits.patch
patches/gcc/: 0001-hades-edits.patch
patches/iconv/: 0001-hades-edits.patch
patches/libmd/: 0001-hades-edits.patch
patches/libtool/: 0001-hades-edits.patch
pkgsrc.d/: autoconf.yml  automake.yml  base-files.yml  bash.yml  binutils.yml  coreutils.yml  dpkg.yml  gcc.yml  gettext.yml  glibc.yml  iconv.yml  libmd.yml  libxcrypt.yml  linux.yml  mingetty.yml  mlibc.yml  ncurses.yml  openssl.yml  pkg-config.yml  readline.yml  shadow.yml  xz-utils.yml  zlib.yml
pkgsrc.d.old/: autoconf.yml  base-files.yml  binutils.yml  bison.yml  coreutils.yml  gettext.yml  iconv.yml  libtool.yml  ncurses.yml  openssl.yml  pkg-config.yml  xz-utils.yml  zlib.yml
schemas/: package.json  pkgsrc.json  source.json  stage.json  step.json  tool.json
web/: next.config.js  package.json  tailwind.config.js
web/app/: layout.tsx  (+3 more)
(+11 files in other folders)
