[tool.poetry]
name = "hbuild"
version = "0.1.0"
description = "Hades package build system"
authors = ["Yavuz Rao <yavuz.rao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rustworkx = "^0.17.1"
jsonschema = "^4.23.0"
pyyaml = "^6.0.2"
toml = "^0.10.2"
rich = "^13.9.4"
gitpython = "^3.1.43"
pydot = "^3.0.3"
pillow = "^11.0.0"
jsonpickle = "^4.0.1"
argparse-dataclass = "^2.0.0"
dearpygui = "^2.0.0"
podman = "^5.4.0.1"
fastapi = {extras = ["standard"], version = "^0.128.0"}
pydantic = "^2.12.3"
bubus = "^1.5.6"
classy-fastapi = "^0.7.0"
python-multipart = "^0.0.20"
persist-queue = "^1.1.0"
uvicorn = "^0.40.0"
sse-starlette = "^3.2.0"
hypercorn = "^0.18.0"
pika = "^1.3.2"
multipledispatch = "^1.0.0"
pymysql = "^1.1.2"
cryptography = "^46.0.4"
kombu = "^5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
